Added DrinkDetailsFragmet, changed temporarily drink model

--- a/CocktailCatalog/app/build.gradle
+++ b/CocktailCatalog/app/build.gradle
@@ -53,4 +53,7 @@ dependencies {
     def retrofit_ver="2.9.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_ver"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_ver"
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 }
