--- a/CocktailCatalog/app/src/main/AndroidManifest.xml
+++ b/CocktailCatalog/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CocktailCatalog">
-        <activity android:name=".View.MainActivity"
+        <activity android:name=".views.MainActivity"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
