--- a/CocktailCatalog/app/src/main/AndroidManifest.xml
+++ b/CocktailCatalog/app/src/main/AndroidManifest.xml
@@ -12,13 +12,19 @@
         android:roundIcon="@drawable/ic_skladnik"
         android:supportsRtl="true"
         android:theme="@style/Theme.CocktailCatalog">
-        <activity android:name=".views.MainActivity"
+
+
+        <activity
+            android:name=".views.MainActivity"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
+
+
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
